--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "build": "^0.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.5.1",
     "run": "^1.5.0",
     "tailwindcss": "^4.1.4"
   },
