--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-paginate": "^8.3.0",
     "react-router": "^7.5.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "run": "^1.5.0",
     "tailwindcss": "^4.1.4"
   },
