--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/%npm_config_name%",
+    "typeorm:generate-migration": "set NODE_ENV=development&& npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./migrations/%npm_config_name%",
+    "typeorm:run-migration": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
+    "typeorm:revert-migration": "npm run typeorm migration:revert -- -d ./typeOrm.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -33,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
